Fix overflow delle folders e oggetti lunghi

--- a/src/app/mailbox/mailbox.component.scss
+++ b/src/app/mailbox/mailbox.component.scss
@@ -77,7 +77,8 @@
   /*position: relative;*/
   display: block;
   width: 300px;
-  overflow: hidden scroll;
+  overflow-x: hidden;
+  overflow-y: auto;
   // padding: 5px
   //flex-direction: column;
 }
